Dark icons added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,14 +10,13 @@
     <a href="#projects" class="text-lg leading-6 text-gray-900"  [ngClass]="darkMode ? 'text-white' : ''">Projects</a>
   </div> 
   <div class="border-2 border-black p-1 rounded-xl cursor-pointer" (click)="toggleMode($event)"  [ngClass]="darkMode ? 'border-neutral-50' : ''">
-    <svg *ngIf="darkMode==true; else elseBlock" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+    <svg *ngIf="darkMode==true; else darkIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
       <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
     </svg> 
-    <ng-template #elseBlock>
+    <ng-template #darkIcon>
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
       </svg>
-      
     </ng-template>   
   </div>
   <div class="hidden lg:flex lg:flex-1 lg:justify-end">
@@ -43,10 +42,16 @@
         <!-- <button type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3">Contact Info</button> -->
         <!-- <button class="lg:w1/2">Contact</button> -->
       </div>
-      <div class="flex items-center gap-10">
+      <div *ngIf="!darkMode; else darkSocials"  class="flex items-center gap-10">
         <a href="https://github.com/rajindersinghsodhi" target="_blank"><img src="github-icon.png" alt="" style="height: 2.5rem; width: 2.5rem;"></a>
         <a href="https://www.linkedin.com/in/rajindersinghsodhi-541744227/" target="_blank"><img src="linkedin-icon.png" alt="" style="height: 2rem; width: 2rem;"></a>
       </div>
+      <ng-template #darkSocials>
+        <div class="flex items-center gap-10">
+          <a href="https://github.com/rajindersinghsodhi"><img src="dark-github-icon.png" alt="" style="height: 2.5rem; width: 2.5rem;"></a>
+          <a href="https://www.linkedin.com/in/rajindersinghsodhi-541744227/" target="_blank"><img src="dark-linkedin-icon.png" alt="" style="height: 2rem; width: 2rem;"></a>
+        </div>
+      </ng-template>
     </div>
   </div>
 </section>
@@ -63,7 +68,10 @@
   <div class="flex lg:flex-row flex-col justify-evenly lg:items-stretch items-center gap-10 mx-3">
     <div class="flex flex-col items-center border bg-white rounded-3xl p-5 lg:w-1/2 w-11/12" [ngClass]="darkMode ? 'bg-black' : ''">
       <div class="flex items-center gap-2 my-2 lg:m-0">
-        <img src="experience-icon.png" alt="" style="height: 1.5rem;">
+        <img *ngIf="!darkMode; else darkExperience" src="experience-icon.png" alt="" style="height: 1.5rem;">
+        <ng-template #darkExperience>
+          <img src="dark-education-icon.png" alt=""  style="height: 2rem;" class="px-2">
+        </ng-template>
         <h1 class="text-xl font-bold"  [ngClass]="darkMode ? 'text-white' : ''">Work Experience</h1>
       </div>
       <div class="w-full flex flex-col justify-center items-center" style="height: 100%;">
@@ -85,7 +93,10 @@
 
     <div class="flex flex-col items-center border bg-white rounded-3xl p-5 lg:w-1/2 w-11/12" [ngClass]="darkMode ? 'bg-black' : ''">
       <div class="flex">
-        <img src="education-icon.png" alt="" style="height: 2rem;" class="px-2">
+        <img *ngIf="!darkMode; else darkEducation" src="education-icon.png" alt="" style="height: 2rem;" class="px-2">
+        <ng-template #darkEducation>
+          <img src="dark-education-icon.png" alt=""  style="height: 2rem;" class="px-2">
+        </ng-template>
         <h1 class="text-xl font-bold" [ngClass]="darkMode ? 'text-white' : ''">Education</h1>
       </div>
       <div class="flex flex-col items-center">
@@ -246,11 +257,17 @@
     <div class="flex justify-evenly gap-10 mx-3">
       <div class="flex flex-col lg:flex-row items-center gap-10 bg-white border rounded-3xl p-5" [ngClass]="darkMode ? 'bg-black' : ''">
         <div class="flex items-center gap-3">
-          <img src="email-icon.png" alt="" style="height:1.5rem;">
+          <img *ngIf="!darkMode; else darkEmail" src="email-icon.png" alt="" style="height:1.5rem;">
+          <ng-template #darkEmail>
+            <img src="dark-email-icon.png" alt="" style="height:1.5rem;"> 
+          </ng-template>
           <span class="text-lg" [ngClass]="darkMode ? 'text-white' : ''">rajindersodhi181&#64;gmail.com</span>
         </div>
         <div class="flex items-center gap-3">
-          <img src="linkedin-icon.png" alt="" style="height: 1.5rem; width: 1.5rem;">
+          <img *ngIf="!darkMode; else darkLinkedin" src="linkedin-icon.png" alt="" style="height: 1.5rem; width: 1.5rem;">
+          <ng-template #darkLinkedin>
+            <img src="dark-linkedin-icon.png" alt="" style="height:1.5rem;"> 
+          </ng-template>
           <span class="text-lg" [ngClass]="darkMode ? 'text-white' : ''">rajindersinghsodhi</span>
         </div>
       </div>
@@ -259,7 +276,7 @@
 </section>
 <!-- Projects Section  -->
 
-<footer class="mx-auto flex max-w-7xl items-center justify-center p-6 lg:px-8 mb-10" aria-label="Global" [ngClass]="darkMode ? 'bg-black' : ''">
+<footer *ngIf="darkMode===false;" class="mx-auto flex max-w-7xl items-center justify-center p-6 lg:px-8 mb-10" aria-label="Global" [ngClass]="darkMode ? 'bg-black' : ''">
   <div class="lg:flex flex lg:justify-center justify-evenly lg:gap-x-12 w-full lg:w-6/12">
     <a href="#about" class="text-lg leading-6 text-gray-900" [ngClass]="darkMode ? 'text-white' : ''">About</a>
     <a href="#experience" class="text-lg leading-6 text-gray-900" [ngClass]="darkMode ? 'text-white' : ''">Experience</a>
