Bug Fix: education icons was showing instead of experience icon in dark mode

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,7 +70,7 @@
       <div class="flex items-center gap-2 my-2 lg:m-0">
         <img *ngIf="!darkMode; else darkExperience" src="experience-icon.png" alt="" style="height: 1.5rem;">
         <ng-template #darkExperience>
-          <img src="dark-education-icon.png" alt=""  style="height: 2rem;" class="px-2">
+          <img src="dark-experience-icon.png" alt=""  style="height: 2rem;" class="px-2">
         </ng-template>
         <h1 class="text-xl font-bold"  [ngClass]="darkMode ? 'text-white' : ''">Work Experience</h1>
       </div>
