--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <a href="#about" class="text-lg leading-6 text-gray-900"  [ngClass]="darkMode ? 'text-white' : ''">About</a>
     <a href="#skills" class="text-lg leading-6 text-gray-900"  [ngClass]="darkMode ? 'text-white' : ''">Technical Skills</a>
     <a href="#projects" class="text-lg leading-6 text-gray-900"  [ngClass]="darkMode ? 'text-white' : ''">Projects</a>
-    <div class="border-2 p-1 rounded-xl cursor-pointer" (click)="toggleMode($event)"  [ngClass]="darkMode ? 'border-neutral-50' : 'border-black'">
+    <div class="border-2 p-1 rounded-xl cursor-pointer hidden lg:block" (click)="toggleMode($event)"  [ngClass]="darkMode ? 'border-neutral-50' : 'border-black'">
       <svg *ngIf="darkMode==true; else darkIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
       </svg> 
