--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <a href="#about" class="text-lg leading-6 text-gray-900"  [ngClass]="darkMode ? 'text-white' : ''">About</a>
     <a href="#skills" class="text-lg leading-6 text-gray-900"  [ngClass]="darkMode ? 'text-white' : ''">Technical Skills</a>
     <a href="#projects" class="text-lg leading-6 text-gray-900"  [ngClass]="darkMode ? 'text-white' : ''">Projects</a>
-    <div class="border-2 p-1 rounded-xl cursor-pointer hidden lg:block" (click)="toggleMode($event)"  [ngClass]="darkMode ? 'border-neutral-50' : 'border-black'">
+    <div class="border-2 p-1 rounded-xl cursor-pointer" (click)="toggleMode($event)"  [ngClass]="darkMode ? 'border-neutral-50' : 'border-black'">
       <svg *ngIf="darkMode==true; else darkIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
       </svg> 
@@ -128,7 +128,7 @@
       <h1 class="text-5xl font-semibold" [ngClass]="darkMode ? 'text-white' : ''">Technical Skills</h1>
     </div>
     <div class="flex lg:flex-row flex-col justify-evenly lg:items-stretch items-center gap-10 mx-3">
-      <div class="flex flex-col items-center  bg-white border rounded-3xl p-5 lg:w-1/3 w-11/12" [ngClass]="darkMode ? 'bg-black' : ''">
+      <div class="flex flex-col items-center border rounded-3xl p-5 lg:w-1/3 w-11/12" [ngClass]="darkMode ? 'bg-black' : '  bg-white'">
         <h1 class="text-xl" [ngClass]="darkMode ? 'text-white' : ''">Frontend Development</h1>
         <div class="flex flex-col items-center">
           <div class="flex flex-wrap gap-3 p-5">
@@ -185,7 +185,7 @@
       <h1 class="text-5xl font-semibold" [ngClass]="darkMode ? 'text-white' : ''">Projects</h1>
     </div>
     <div class="flex flex-col lg:flex-row justify-evenly lg:items-stretch items-center gap-10 mx-3">
-      <div class="flex flex-col items-start  bg-white border rounded-3xl p-5 lg:w-1/3 w-11/12" [ngClass]="darkMode ? 'bg-black' : ''">
+      <div class="flex flex-col items-start border rounded-3xl p-5 lg:w-1/3 w-11/12" [ngClass]="darkMode ? 'bg-black' : 'bg-white'">
         <h1 class="text-xl font-bold" [ngClass]="darkMode ? 'text-white' : ''">Convocraze</h1>
         <div class="flex flex-col items-start">
           <h1 [ngClass]="darkMode ? 'text-white' : ''">Chating web app</h1>
@@ -206,7 +206,7 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-start  bg-white border rounded-3xl p-5 lg:w-1/3 w-11/12" [ngClass]="darkMode ? 'bg-black' : ''">
+      <div class="flex flex-col items-start border rounded-3xl p-5 lg:w-1/3 w-11/12" [ngClass]="darkMode ? 'bg-black' : ' bg-white'">
         <h1 class="text-xl font-bold" [ngClass]="darkMode ? 'text-white' : ''">Disney Hotstar Clone</h1>
         <div class="flex flex-col items-start">
           <h1 [ngClass]="darkMode ? 'text-white' : ''">Frontend clone of Disney Hotstar</h1>
@@ -225,7 +225,7 @@
           </div>
         </div>
       </div>
-      <div class="flex flex-col items-start  bg-white border rounded-3xl p-5 lg:w-1/3 w-11/12" [ngClass]="darkMode ? 'bg-black' : ''">
+      <div class="flex flex-col items-start border rounded-3xl p-5 lg:w-1/3 w-11/12" [ngClass]="darkMode ? 'bg-black' : 'bg-white'">
         <h1 class="text-xl font-bold" [ngClass]="darkMode ? 'text-white' : ''">Covid Management System</h1>
         <div class="flex flex-col items-start">
           <h1 [ngClass]="darkMode ? 'text-white' : ''">management of covid vaccination</h1>
@@ -255,7 +255,7 @@
       <h1 class="text-5xl font-semibold" [ngClass]="darkMode ? 'text-white' : ''">Contact Me</h1>
     </div>
     <div class="flex justify-evenly gap-10 mx-3">
-      <div class="flex flex-col lg:flex-row items-center gap-10 bg-white border rounded-3xl p-5" [ngClass]="darkMode ? 'bg-black' : ''">
+      <div class="flex flex-col lg:flex-row items-center gap-10 border rounded-3xl p-5" [ngClass]="darkMode ? 'bg-black' : ' bg-white'">
         <div class="flex items-center gap-3">
           <img *ngIf="!darkMode; else darkEmail" src="email-icon.png" alt="" style="height:1.5rem;">
           <ng-template #darkEmail>
@@ -276,12 +276,16 @@
 </section>
 <!-- Projects Section  -->
 
-<footer *ngIf="darkMode===false;" class="mx-auto flex max-w-7xl items-center justify-center p-6 lg:px-8 mb-10" aria-label="Global" [ngClass]="darkMode ? 'bg-black' : ''">
-  <div class="lg:flex flex lg:justify-center justify-evenly lg:gap-x-12 w-full lg:w-6/12">
-    <a href="#about" class="text-lg leading-6 text-gray-900" [ngClass]="darkMode ? 'text-white' : ''">About</a>
-    <a href="#experience" class="text-lg leading-6 text-gray-900" [ngClass]="darkMode ? 'text-white' : ''">Experience</a>
-    <a href="#projects" class="text-lg leading-6 text-gray-900" [ngClass]="darkMode ? 'text-white' : ''">Projects</a>
+<footer class="mx-auto flex flex-col gap-5 max-w-7xl items-center justify-center p-6 lg:px-8 mb-5" aria-label="Global" [ngClass]="darkMode ? 'bg-black' : ''">
+  <div class="lg:flex flex lg:justify-center justify-evenly lg:gap-x-12 w-full lg:w-6/12" [ngClass]="darkMode ? 'bg-black' : ' bg-white'">
+    <a href="#about" class="text-lg leading-6" [ngClass]="darkMode ? 'text-white' : 'text-gray-900'">About</a>
+    <a href="#experience" class="text-lg leading-6" [ngClass]="darkMode ? 'text-white' : 'text-gray-900'">Experience</a>
+    <a href="#projects" class="text-lg leading-6" [ngClass]="darkMode ? 'text-white' : 'text-gray-900'">Projects</a>
+  </div>
+  <div class="lg:flex flex lg:justify-center justify-evenly lg:gap-x-12 w-full lg:w-6/12" [ngClass]="darkMode ? 'bg-black' : ' bg-white'">
+    <span class="text-sm leading-6" [ngClass]="darkMode ? 'text-white' : 'text-gray-900'">Version 1.0.2</span>
   </div>
 </footer>
 
 <router-outlet/>
+
