--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,10 @@
     <a href="#skills" class="text-lg leading-6 text-gray-900"  [ngClass]="darkMode ? 'text-white' : ''">Technical Skills</a>
     <a href="#projects" class="text-lg leading-6 text-gray-900"  [ngClass]="darkMode ? 'text-white' : ''">Projects</a>
     <div class="border-2 p-1 rounded-xl cursor-pointer" (click)="toggleMode($event)"  [ngClass]="darkMode ? 'border-neutral-50' : 'border-black'">
-      <svg *ngIf="darkMode==true; else darkIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+      <svg *ngIf="darkMode==true; else lightIcon" xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
       </svg> 
-      <ng-template #darkIcon>
+      <ng-template #lightIcon>
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
           <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
         </svg>
@@ -249,7 +249,7 @@
   
 <!-- Contact Section  -->
 <section id="contactMe" [ngClass]="darkMode ? 'bg-black' : ''">
-  <div class="flex flex-col justify-evenly items-center" id="contact-container">
+  <div class="flex flex-col justify-evenly items-center py-5" id="contact-container">
     <div class="flex flex-col items-center justify-center mt-20 mb-10 lg:m-0">
       <span [ngClass]="darkMode ? 'text-white' : ''">Get in Touch</span>
       <h1 class="text-5xl font-semibold" [ngClass]="darkMode ? 'text-white' : ''">Contact Me</h1>
@@ -276,13 +276,13 @@
 </section>
 <!-- Projects Section  -->
 
-<footer class="mx-auto flex flex-col gap-5 max-w-7xl items-center justify-center p-6 lg:px-8 mb-5" aria-label="Global" [ngClass]="darkMode ? 'bg-black' : ''">
-  <div class="lg:flex flex lg:justify-center justify-evenly lg:gap-x-12 w-full lg:w-6/12" [ngClass]="darkMode ? 'bg-black' : ' bg-white'">
+<footer class="mx-auto flex flex-col gap-10 w-full items-center justify-center p-6" aria-label="Global" [ngClass]="darkMode ? 'bg-black' : ''">
+  <div class="lg:flex flex lg:justify-evenly justify-evenly border rounded-3xl p-5 lg:gap-x-12 w-full lg:w-6/12" [ngClass]="darkMode ? 'bg-black' : ' bg-white'">
     <a href="#about" class="text-lg leading-6" [ngClass]="darkMode ? 'text-white' : 'text-gray-900'">About</a>
-    <a href="#experience" class="text-lg leading-6" [ngClass]="darkMode ? 'text-white' : 'text-gray-900'">Experience</a>
+    <a href="#skills" class="text-lg leading-6" [ngClass]="darkMode ? 'text-white' : 'text-gray-900'">Technical Skills</a>
     <a href="#projects" class="text-lg leading-6" [ngClass]="darkMode ? 'text-white' : 'text-gray-900'">Projects</a>
   </div>
-  <div class="lg:flex flex lg:justify-center justify-evenly lg:gap-x-12 w-full lg:w-6/12" [ngClass]="darkMode ? 'bg-black' : ' bg-white'">
+  <div class="lg:flex flex lg:justify-center justify-evenly" [ngClass]="darkMode ? 'bg-black' : ' bg-white'">
     <span class="text-sm leading-6" [ngClass]="darkMode ? 'text-white' : 'text-gray-900'">Version 1.0.2</span>
   </div>
 </footer>
